<resources>
    <string name="app_name">Chatio</string>

    <string name="edit_email_hint">Email</string>
    <string name="edit_password_hint">Password</string>
    <string name="link_to_register">Need new account? Register</string>
    <string name="login">Login</string>


    <string name="edit_username_hint">Username</string>
    <string name="link_to_login">Already have an account?</string>
    <string name="edit_password_repeat_hint">Repeat password</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="user_username">Username</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout_profile">Logout</string>
    <string name="user_email">Email</string>

    <string name="change_profile_image">Change image</string>
    <string name="delete_account">Delete account</string>
    <string name="search_hint">Search</string>
    <string name="send_message">Send</string>

    <string name="dummy_text">This is my message</string>

    <string name="progress_bar_message">Loading…Please wait</string>

    <string name="type_message_hint">Type message…</string>

    <string name="edit_username">Change username</string>
    <string name="datetime">15.03.2000.  18:00</string>
    <string name="time">18:00</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="confirm_button">Confirm</string>

</resources>