<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            android:outlineProvider="none"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:src="@drawable/default_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_text_view_profile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/rounded_corners_textview_profile"
            android:drawableLeft="@drawable/username_icon_drawable"
            android:gravity="center"
            android:padding="10dp"
            android:paddingRight="10dp"
            android:text="@string/user_username"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_image_profile" />

        <TextView
            android:id="@+id/email_text_view_profile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners_textview_profile"
            android:drawableLeft="@drawable/email_icon_drawable"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/user_email"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/username_text_view_profile"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username_text_view_profile"
            app:layout_constraintTop_toBottomOf="@+id/username_text_view_profile" />

        <Button
            android:id="@+id/edit_button_profile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_corners_smaller_button"
            android:fontFamily="monospace"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/logout_text_view_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/logout_text_view_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:text="@string/logout_profile"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_button_profile"
            app:layout_constraintStart_toStartOf="@+id/edit_button_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>